feat: add product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=assessment_souce_code_muhammadhudaibi
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/asessment_db
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=hudahuda
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
